--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-sidebar></app-sidebar>  
     <div class="main-panel">
         <div class="content">
-          <app-kajian></app-kajian>
+          <router-outlet></router-outlet>
         </div>
         <app-footer></app-footer>
     </div>
