--- a/src/app/templates/sidebar/sidebar.component.html
+++ b/src/app/templates/sidebar/sidebar.component.html
@@ -2,25 +2,25 @@
   <div class="scrollbar-inner sidebar-wrapper">
     <ul class="nav">
       <li class="nav-item active">
-        <a href="index.html">
+        <a href="/">
           <i class="la la-dashboard"></i>
           <p>Info Kajian</p>								
         </a>
       </li>
       <li class="nav-item">
-        <a href="ustadz.html">
+        <a href="/ustadz">
           <i class="la la-graduation-cap"></i>
           <p>Info Ustadz</p>							
         </a>
       </li>
       <li class="nav-item">
-        <a href="jadwal.html">
+        <a href="/jadwal">
           <i class="la la-user"></i>
           <p>Kajian Saya</p>							
         </a>	
       </li>				
       <li class="nav-item">
-        <a href="tambah.html">
+        <a href="/tambah">
           <i class="la la-comment"></i>
           <p>Tambah Kajian</p>								
         </a>	
