--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -28,7 +28,7 @@
             <div class="tab-content" id="myTabContent">
 
               <div class="tab-pane fade show active" id="world-tab-1" role="tabpanel" aria-labelledby="tab1">
-                <div class="row">
+                <div class="row" *ngFor="let data of kajian">
 
                   <div class="col-12 col-md-6">
                     <!-- Single Blog Post -->
@@ -37,88 +37,23 @@
                       <div class="post-thumbnail">
                         <img src="../../assets/templates/img/blog-img/b2.jpg" alt="">
                         <!-- Catagory -->
-                        <div class="post-cta"><a href="#">hari ini</a></div>
+                        <div class="post-cta"><a href="#">{{ data.tanggal }}</a></div>
                       </div>
                       <!-- Post Content -->
                       <div class="post-content">
                         <a href="#" class="headline">
-                          <h5>Tabligh Akbar - Tahun Baru Hijriah 1440</h5>
+                          <h5>{{ data.judul }}</h5>
                         </a>
-                        <p>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</p>
+                        <p>Lorem ipsum dolor sit amet, consectetus adipiscing elit...</p>
                         <!-- Post Meta -->
                         <div class="post-meta">
-                          <p><a href="#" class="post-author">Ustadz Abdul Somad</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                          <span class="badge badge-success">Tabligh  Akbar</span>
-                          <span class="badge badge-default">Fiqih</span>
-                          <span class="badge badge-primary">Ahlak</span>
+                          <p><a href="#" class="post-author">{{ data.pemateri }}</a> on <a href="#" class="post-date">{{ data.lokasi }},<br>{{data.tanggal}}</a></p>
+                          <span class="badge badge-success">{{data.kategori}}</span>
                         </div>
                         
                       </div>
                     </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b3.jpg" alt="">
-                        <!-- Catagory -->
-                        <div class="post-cta"><a href="#">travel</a></div>
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h5>
-                        </a>
-                        <p>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</p>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b14.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One sof the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b15.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>                  
+                  </div>                               
                 </div>
               </div>
 
@@ -387,7 +322,7 @@
                   </div>
                 </div>
               </div>
-              
+
             </div>
         </div>
     </div>				
