--- a/src/app/components/tambah/tambah.component.html
+++ b/src/app/components/tambah/tambah.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div clas="col-sm-10" id="firstSection">
+    <div class="col-sm-10" id="firstSection">
     <form class="border p-2 mb-2 " id="form">
       <div class="form-group">
       <label>Kajian</label>
