--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -28,9 +28,8 @@
             <div class="tab-content" id="myTabContent">
 
               <div class="tab-pane fade show active" id="world-tab-1" role="tabpanel" aria-labelledby="tab1">
-                <div class="row" *ngFor="let data of kajian">
-
-                  <div class="col-12 col-md-6">
+                <div class="row">
+                  <div class="col-12 col-md-6" *ngFor="let data of kajian">
                     <!-- Single Blog Post -->
                     <div class="single-blog-post">
                       <!-- Post Thumbnail -->
@@ -44,13 +43,15 @@
                         <a href="#" class="headline">
                           <h5>{{ data.judul }}</h5>
                         </a>
-                        <p>Lorem ipsum dolor sit amet, consectetus adipiscing elit...</p>
+                        <p>{{ data.deskripsi }}</p>
                         <!-- Post Meta -->
                         <div class="post-meta">
-                          <p><a href="#" class="post-author">{{ data.pemateri }}</a> on <a href="#" class="post-date">{{ data.lokasi }},<br>{{data.tanggal}}</a></p>
-                          <span class="badge badge-success">{{data.kategori}}</span>
+                          <p><a href="#" class="post-author"><b>{{ data.pemateri }}</b></a><br><a href="#" class="post-date">{{ data.lokasi }},<br>{{data.tanggal}}</a></p>
+                          <br><span class="badge badge-success">{{ data.kategori }}</span>
+                          <div class="text-right">
+                            <button class="btn btn-danger" (click)="deleteKajian($event, data)"><i class="la la-trash"></i></button>
+                          </div>
                         </div>
-                        
                       </div>
                     </div>
                   </div>                               
