--- a/src/app/components/tambah/tambah.component.html
+++ b/src/app/components/tambah/tambah.component.html
@@ -1,30 +1,35 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-10" id="firstSection">
-    <form class="border p-2 mb-2 " id="form">
+    <form class="border p-2 mb-2 " id="form" (ngSubmit)="onSubmit()">
       <div class="form-group">
-      <label>Kajian</label>
-      <input type="text" class="form-control" id="judul" placeholder="Judul Kajian">           
+        <label>Judul Kajian</label>
+        <input type="text" class="form-control" [(ngModel)]="kajian.judul" name="judul" placeholder="Contoh: Nikmatnya Sedekah ..">           
       </div>
       <div class="form-group">
-      <label>Ustadz</label>
-      <input type="text" class="form-control" id="ustadz" placeholder="Ustadz">           
+          <label>Deskripsi</label>
+          <textarea class="form-control" [(ngModel)]="kajian.deskripsi" name="deskripsi"></textarea>           
+        </div>
+      <div class="form-group">
+        <label>Pemateri</label>
+        <input type="text" class="form-control" [(ngModel)]="kajian.pemateri" name="pemateri" placeholder="Contoh: Ustadz Abu Haidar ..">           
       </div>
       <div class="form-group">
-      <label>Lokasi</label>
-      <input type="text" class="form-control" id="lokasi" placeholder="Lokasi">           
+        <label>Lokasi</label>
+        <input type="text" class="form-control" [(ngModel)]="kajian.lokasi" name="lokasi" placeholder="Contoh: Masjid Agung Al-Ukhuwah, Bandung ..">           
       </div>  
 
       <div class="form-group"> <!-- Date input -->
-      <label class="control-label" for="tanggal">Tanggal</label>
-      <input class="form-control" id="tanggal" name="tanggal" placeholder="YYYY/MM/DD" type="text"/>
+        <label class="control-label" for="tanggal">Tanggal</label>
+        <input class="form-control" [(ngModel)]="kajian.tanggal" name="tanggal" placeholder="YYYY/MM/DD" type="text"/>
       </div>          
       <div class="form-group">
         <label>Kategori</label>
-        <input type="text" class="form-control" id="kategori" placeholder="Kategori">           
+        <input type="text" class="form-control" [(ngModel)]="kajian.kategori" name="kategori" placeholder="Contoh: Tabligh Akbar, Tematik, Tahsin, ..">           
       </div>  
-
-      <button type="submit" id="button1" class="btn btn-primary">Tambah Kajian</button>
+      <div class="form-group text-center">
+        <button type="submit" id="button1" class="btn btn-primary">Tambah Kajian</button>
+      </div>
       <button style="display: none" id="button2" class="btn btn-success">Update Kajian</button>
       <button style="display: none" id="button3" class="btn btn-danger">Cancel</button>
     </form>
