--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,35 @@
-<p>
-  signup works!
-</p>
+<form class="login100-form validate-form">
+    <span class="login100-form-title">
+      Website Info Kajian Islam
+    </span>
+
+    <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+      <input class="input100" type="text" name="email" placeholder="Email">
+      <span class="focus-input100"></span>
+      <span class="symbol-input100">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+      </span>
+    </div>
+
+    <div class="wrap-input100 validate-input" data-validate = "Password is required">
+      <input class="input100" type="password" name="pass" placeholder="Password">
+      <span class="focus-input100"></span>
+      <span class="symbol-input100">
+        <i class="fa fa-lock" aria-hidden="true"></i>
+      </span>
+    </div>
+    
+    <div class="container-login100-form-btn">
+      <button class="login100-form-btn">
+        Register
+      </button>
+    </div>
+
+
+    <div class="text-center p-t-136">
+      <a class="txt2" routerLink="../login">
+        Already have an account
+        <i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i>
+      </a>
+    </div>
+  </form>
