--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="main-header">
   <div class="logo-header">
-    <a href="index.html" class="logo">
+    <a routerLink="/" class="logo">
       Info Kajian Islam
     </a>
     <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
                 </a>
                 <a href="#">
                   <div class="notif-img"> 
-                    <img src="assets/img/profile2.jpg" alt="Img Profile">
+                    <img src="assets/templates/assets/img/profile2.jpg" alt="Img Profile">
                   </div>
                   <div class="notif-content">
                     <span class="block">
@@ -91,11 +91,11 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="assets/img/profile.png" alt="user-img" width="36" class="img-circle"><span>Andi Wibowo</span></a>
+          <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="assets/templates/assets/img/profile.png" alt="user-img" width="36" class="img-circle"><span>Andi Wibowo</span></a>
           <ul class="dropdown-menu dropdown-user">
             <li>
               <div class="user-box">
-                <div class="u-img"><img src="assets/img/profile.png" alt="user"></div>
+                <div class="u-img"><img src="assets/templates/assets/img/profile.png" alt="user"></div>
                 <div class="u-text">
                   <h4>Andi Wibowo</h4>
                   <p class="text-muted">andi@wibowo.id</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
