--- a/src/app/templates/sidebar/sidebar.component.html
+++ b/src/app/templates/sidebar/sidebar.component.html
@@ -1,26 +1,30 @@
 <div class="sidebar">
   <div class="scrollbar-inner sidebar-wrapper">
     <ul class="nav">
-      <li class="nav-item active">
-        <a href="/">
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+        true}" class="nav-item">
+        <a routerLink="/">
           <i class="la la-dashboard"></i>
           <p>Info Kajian</p>								
         </a>
       </li>
-      <li class="nav-item">
-        <a href="/ustadz">
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+        true}" class="nav-item">
+        <a routerLink="/ustadz">
           <i class="la la-graduation-cap"></i>
           <p>Info Ustadz</p>							
         </a>
       </li>
-      <li class="nav-item">
-        <a href="/jadwal">
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+        true}" class="nav-item">
+        <a routerLink="/jadwal">
           <i class="la la-user"></i>
           <p>Kajian Saya</p>							
         </a>	
       </li>				
-      <li class="nav-item">
-        <a href="/tambah">
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+        true}" class="nav-item">
+        <a routerLink="/tambah">
           <i class="la la-comment"></i>
           <p>Tambah Kajian</p>								
         </a>	
