--- a/src/assets/templates/css/ready.css
+++ b/src/assets/templates/css/ready.css
@@ -2077,7 +2077,7 @@ body {
   opacity: 0;
 }
 .main-header .logo-header .navbar-toggler .navbar-toggler-icon {
-  background: url(../img/menu2.png);
+  background: url(../assets/img/menu2.png);
   background-size: cover;
   height: 1em;
   width: 1em;
