Added Login & Register Function

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,29 +4,35 @@
         <div class="login100-pic js-tilt" data-tilt>
           <img src="assets/templates/img/img-01.png" alt="IMG">
         </div>
-        <form class="login100-form validate-form">
+        <form [formGroup]="userForm" class="login100-form validate-form" (ngSubmit)="register()">
           <span class="login100-form-title">
             Website Info Kajian Islam
           </span>
 
           <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-            <input class="input100" type="text" name="email" placeholder="Email">
+            <input class="input100" type="text" name="email" placeholder="Email" formControlName="email">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-envelope" aria-hidden="true"></i>
             </span>
           </div>
+          <div *ngIf="formErrors.email" class="notification is-danger">
+                {{ formErrors.email }}
+            </div>
 
           <div class="wrap-input100 validate-input" data-validate = "Password is required">
-            <input class="input100" type="password" name="pass" placeholder="Password">
+            <input class="input100" type="password" name="pass" placeholder="Password" formControlName="password">
             <span class="focus-input100"></span>
             <span class="symbol-input100">
               <i class="fa fa-lock" aria-hidden="true"></i>
             </span>
           </div>
+          <div *ngIf="formErrors.password" class="notification is-danger">
+                {{ formErrors.password }}
+            </div>
           
           <div class="container-login100-form-btn">
-            <button class="login100-form-btn">
+            <button type="submit" class="login100-form-btn">
               Register
             </button>
           </div>
