--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -90,14 +90,14 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
-          <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="assets/templates/assets/img/profile.png" alt="user-img" width="36" class="img-circle"><span>Andi Wibowo</span></a>
+        <li class="nav-item dropdown" *ngIf="auth.user | async as user">
+          <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img [src]="user.photoUrl || 'src/assets/icons/user.png'" alt="user-img" width="36" class="img-circle"><span>{{ user.displayName }}</span></a>
           <ul class="dropdown-menu dropdown-user">
             <li>
               <div class="user-box">
-                <div class="u-img"><img src="assets/templates/assets/img/profile.png" alt="user"></div>
+                <div class="u-img"><img [src]="user.photoUrl || 'src/assets/icons/user.png'" alt="user"></div>
                 <div class="u-text">
-                  <h4>Andi Wibowo</h4>
+                  <h4>{{ user.displayName }}</h4>
                   <p class="text-muted">andi@wibowo.id</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
                 </div>
               </li>
@@ -108,7 +108,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+              <a class="dropdown-item" href="#" (click)="logout()"><i class="fa fa-power-off"></i> Logout</a>
             </ul>
             <!-- /.dropdown-user -->
           </li>
