Integrasi Interface Baru

--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -1,330 +1,23 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="world-catagory-area">
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
-            
-              <li class="nav-item">
-                <a class="nav-link active" id="tab1" data-toggle="tab" href="#world-tab-1" role="tab" aria-controls="world-tab-1" aria-selected="true">All</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" id="tab2" data-toggle="tab" href="#world-tab-2" role="tab" aria-controls="world-tab-2" aria-selected="false">Tabligh Akbar</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" id="tab3" data-toggle="tab" href="#world-tab-3" role="tab" aria-controls="world-tab-3" aria-selected="false">Tafsir Al-Quran</a>
-              </li>          
-
-              <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">More</a>
-                <div class="dropdown-menu">
-                  <a class="nav-link" id="tab7" data-toggle="tab" href="#world-tab-7" role="tab" aria-controls="world-tab-7" aria-selected="false">Aqidah</a>
-                  <a class="nav-link" id="tab8" data-toggle="tab" href="#world-tab-8" role="tab" aria-controls="world-tab-8" aria-selected="false">Sirah Nabawi</a>
-                  <a class="nav-link" id="tab9" data-toggle="tab" href="#world-tab-9" role="tab" aria-controls="world-tab-9" aria-selected="false">Tahsin</a>
-                </div>
-              </li>  -->
-            </ul>
-
-            <div class="tab-content" id="myTabContent">
-
-              <div class="tab-pane fade show active" id="world-tab-1" role="tabpanel" aria-labelledby="tab1">
-                <div class="row">
-                  <div class="col-12 col-md-6" *ngFor="let data of kajian">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b2.jpg" alt="">
-                        <!-- Catagory -->
-                        <div class="post-cta"><a href="#">{{ data.tanggal }}</a></div>
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>{{ data.judul }}</h5>
-                        </a>
-                        <p>{{ data.deskripsi }}</p>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author"><b>{{ data.pemateri }}</b></a><br><a href="#" class="post-date">{{ data.lokasi }},<br>{{data.tanggal}}</a></p>
-                          <br><span class="badge badge-success">{{ data.kategori }}</span>
-                          <div class="text-right">
-                            <button class="btn btn-danger" (click)="deleteKajian($event, data)"><i class="la la-trash"></i></button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>                               
-                </div>
-              </div>
-
-              <div class="tab-pane fade" id="world-tab-2" role="tabpanel" aria-labelledby="tab2">
-                <div class="row">
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b1.jpg" alt="">
-                        <!-- Catagory -->
-                        <div class="post-cta"><a href="#">travel</a></div>
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</h5>
-                        </a>
-                        <p>How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in...</p>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b10.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b11.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b12.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b13.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="tab-pane fade" id="world-tab-3" role="tabpanel" aria-labelledby="tab3">
-                <div class="row">
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b14.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b15.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b16.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b17.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b14.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b15.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b16.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-12 col-md-6">
-                    <!-- Single Blog Post -->
-                    <div class="single-blog-post post-style-2 d-flex align-items-center mb-1">
-                      <!-- Post Thumbnail -->
-                      <div class="post-thumbnail">
-                        <img src="../../assets/templates/img/blog-img/b17.jpg" alt="">
-                      </div>
-                      <!-- Post Content -->
-                      <div class="post-content">
-                        <a href="#" class="headline">
-                          <h5>How Did van Gogh’s Turbulent Mind Depict One of the Most</h5>
-                        </a>
-                        <!-- Post Meta -->
-                        <div class="post-meta">
-                          <p><a href="#" class="post-author">Katy Liu</a> on <a href="#" class="post-date">Sep 29, 2017 at 9:48 am</a></p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
+<div class="carousel-wrapper" style="width:100%;">
+  <div class="carousel" data-flickity *ngFor="let data of kajian">
+    <div class="carousel-cell">
+      <div class="card-img">
+          <img src="../../assets/component/images/kajian2.jpg" />
+      </div>
+      <div class="card-title">
+          <h3>{{ data.judul }}</h3>
+          <p class="card-pemateri">by {{ data.pemateri }}</p>
         </div>
-    </div>				
+          <hr>
+        <div class="card-desc">
+          <p>
+            <span>{{ data.lokasi }}</span>
+            <br>
+            {{ data.tanggal }}
+            <br>
+            {{ data.kategori }}
+          </p>
+      </div>
+    </div>
   </div>
+</div>
