--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -1,8 +1,6 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>  
-<div class="main-panel">
-    <div class="content">
+<div>
+	<app-header></app-header>
       <router-outlet></router-outlet>
-    </div>
-    <app-footer></app-footer>
+	<app-footer></app-footer>
+
 </div>
