--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,6 +8,42 @@
           <span class="login100-form-title">
             Website Info Kajian Islam
           </span>
+          
+          <div class="wrap-input100 validate-input">
+            <input class="input100" type="text" name="nama" placeholder="Nama Lengkap" formControlName="nama">
+            <span class="focus-input100"></span>
+            <span class="symbol-input100">
+              <i class="fa fa-user" aria-hidden="true"></i>
+            </span>
+          </div>
+
+            <div class="wrap-input100 validate-input">
+            <input class="input100" type="text" name="username" placeholder="Username" formControlName="username">
+            <span class="focus-input100"></span>
+            <span class="symbol-input100">
+              <i class="fa fa-user" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div *ngIf="formErrors.username" class="notification is-danger">
+                {{ formErrors.username }}
+            </div>
+
+          <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+            <select class="input100" type="text" name="level" placeholder="Register sebagai" formControlName="level">
+              <option value="" disabled selected="">Register Sebagai</option>
+              <option value="1">Masjid</option>
+              <option value="2">Majelis</option>
+              <option value="3">Ustadz</option>
+              <option value="4">User</option>
+            </select>
+            <span class="focus-input100"></span>
+            <span class="symbol-input100">
+              <i class="fa fa-users" aria-hidden="true"></i>
+            </span>
+          </div>
+          <div *ngIf="formErrors.email" class="notification is-danger">
+                {{ formErrors.level }}
+            </div>
 
           <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
             <input class="input100" type="text" name="email" placeholder="Email" formControlName="email">
