--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -1,6 +1,5 @@
-<div>
+<div class="col-xs-12">
 	<app-header></app-header>
       <router-outlet></router-outlet>
 	<app-footer></app-footer>
-
 </div>
