--- a/src/assets/component/css/main.css
+++ b/src/assets/component/css/main.css
@@ -55,6 +55,53 @@ input, select {
     margin-top: 3em;
     font-size: .8rem;
 }
+.content__body.kajian h2 {
+    font-size: 2em;
+    border-left: 4px solid cyan;
+    padding-left: 10px;
+}
+.kajian-img {
+    width: 100%;
+    max-height:250px;
+    overflow: hidden;
+}
+.kajian-img img {
+    width: 100%;
+}
+.kajian-title {
+    padding-top: 2em;
+}
+.kajian-title p {
+    padding-left: 1em;
+    font-style: italic;
+    font-size: 1em;
+    color: #777;
+}
+.kajian-desc p {
+    font-size: .8rem;
+}
+.kajian-desc span {
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: #333;
+}
+.kajian-kategori{
+    text-align: right;
+    position: absolute;
+    right: 2em;
+    bottom: 2em;
+}
+.kajian-kategori a {
+    background-color: #15C26B;
+    color: #fff;
+    border-radius: 4px;
+    font-size: .7rem;
+    padding: 2px 7px;
+}
+.content-kajian {
+    padding-bottom: 7em;
+}
 .rules {
     padding: 2em;
     color: #666;
