--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -21,6 +21,9 @@
           <hr>
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link btn btn-primary addBtn" href="/tambah">Post Kajian</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="index2.html">Profile</a>
             </li>
             <li class="nav-item">
