--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -1,7 +1,9 @@
 <section id="content" class="content-kajian">
   <div class="container">
-      <div class="col-xs-12 offset-sm-4 content__header">
-          <h2>List Kajian</h2>
+      <div class="row">
+        <div class="col offset-md-4 content__header">
+            <h2>List Kajian</h2>
+        </div>
       </div>
       <div class="col-xs-12 col-sm-4 offset-sm-4 content__body kajian" *ngFor="let data of kajian">
           <div class="kajian-img">
