Add Masjid, Majelis, Pemateri Route

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -6,16 +6,16 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Kajian <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Kajian <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Masjid</a>
+              <a class="nav-link" href="/masjid">Masjid</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Majelis</a>
+              <a class="nav-link" href="/majelis">Majelis</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pemateri</a>
+              <a class="nav-link" href="/pemateri">Pemateri</a>
             </li>
           </ul>
           <hr>
@@ -27,7 +27,7 @@
               <a class="nav-link" href="index2.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign Out</a>
+              <a class="nav-link" href="" (click)="logout()">Sign Out</a>
             </li>
           </ul>
         </div>
