Added notification message

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -8,6 +8,7 @@
             <span class="login100-form-title">
               Website Info Kajian Islam
             </span>
+            <app-notification></app-notification>
 
             <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
               <input class="input100" type="text" name="email" placeholder="Email" formControlName="email" required>
