--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -8,7 +8,7 @@
           <span class="login100-form-title">
             Website Info Kajian Islam
           </span>
-          
+          <app-notification></app-notification>
           <div class="wrap-input100 validate-input">
             <input class="input100" type="text" name="nama" placeholder="Nama Lengkap" formControlName="nama">
             <span class="focus-input100"></span>
@@ -16,6 +16,9 @@
               <i class="fa fa-user" aria-hidden="true"></i>
             </span>
           </div>
+          <div *ngIf="formErrors.nama" class="notification is-danger">
+                {{ formErrors.nama }}
+            </div>
 
             <div class="wrap-input100 validate-input">
             <input class="input100" type="text" name="username" placeholder="Username" formControlName="username">
@@ -41,7 +44,7 @@
               <i class="fa fa-users" aria-hidden="true"></i>
             </span>
           </div>
-          <div *ngIf="formErrors.email" class="notification is-danger">
+          <div *ngIf="formErrors.level" class="notification is-danger">
                 {{ formErrors.level }}
             </div>
 
