--- a/src/app/components/pemateri/pemateri.component.html
+++ b/src/app/components/pemateri/pemateri.component.html
@@ -5,15 +5,24 @@
             <h2>List Pemateri</h2>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-4 offset-sm-4 content__body masjid">
-          <div class="masjid-title">
-            <h2>Dr. Syafiq Riza Basalamah, M.A</h2>
-            <p>@syafiqbasalamah<br></p>
-          </div>
-            <hr>
-          <div  class="text-right">
-            <a href="#" class="btn btn-info btn-sm">View Details</a>
-          </div>
-      </div>
+      <div *ngIf="user?.length > 0; else noData">
+	      <div class="col-xs-12 col-sm-4 offset-sm-4 content__body masjid" *ngFor="let data of user">
+	          <div class="masjid-title">
+	            <h2>{{ data.nama }}</h2>
+	            <p>@{{ data.username }}<br></p>
+	          </div>
+	            <hr>
+	          <div  class="text-right">
+	            <a href="#" class="btn btn-info btn-sm">View Details</a>
+	          </div>
+	      </div>
+	  </div>
   </div>
 </section>
+
+<ng-template #noData>
+	<div class="col-xs-12 col-sm-4 offset-sm-4 content__body masjid">
+		<p>Data Pemateri tidak ditemukan.</p>
+	</div>
+</ng-template>
+
