Minor fix : services + responsiveness

--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -1,11 +1,11 @@
 <section id="content" class="content-kajian">
   <div class="container">
       <div class="row">
-        <div class="col offset-md-4 content__header">
+        <div class="col offset-md-2 offset-lg-3 content__header">
             <h2>List Kajian</h2>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-4 offset-sm-4 content__body kajian" *ngFor="let data of kajian">
+      <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body kajian" *ngFor="let data of kajian">
           <div class="kajian-img">
             <img src="../../assets/component/images/kajian2.jpg">
           </div>
