--- a/src/app/components/tambah/tambah.component.html
+++ b/src/app/components/tambah/tambah.component.html
@@ -1,9 +1,9 @@
 <section id="content">
   <div class="container">
-      <div class="col-xs-12 offset-sm-4 content__header">
+      <div class="col-xs-12 offset-md-3 offset-lg-4 content__header">
           <h2>Post Kajian</h2>
       </div>
-      <div class="col-xs-12 col-sm-4 offset-sm-4 content__body">
+      <div class="col-xs-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body">
           <form (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <label for="judul">Judul Kajian</label>
