--- a/src/app/components/pemateri/pemateri.component.html
+++ b/src/app/components/pemateri/pemateri.component.html
@@ -1,12 +1,12 @@
 <section id="content" class="content-kajian">
   <div class="container">
       <div class="row">
-        <div class="col offset-md-4 content__header">
+        <div class="col offset-md-3 offset-lg-4 content__header">
             <h2>List Pemateri</h2>
         </div>
       </div>
       <div *ngIf="user?.length > 0; else noData">
-	      <div class="col-xs-12 col-sm-4 offset-sm-4 content__body masjid" *ngFor="let data of user">
+	      <div class="col-xs-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body masjid" *ngFor="let data of user">
 	          <div class="masjid-title">
 	            <h2>{{ data.nama }}</h2>
 	            <p>@{{ data.username }}<br></p>
@@ -21,7 +21,7 @@
 </section>
 
 <ng-template #noData>
-	<div class="col-xs-12 col-sm-4 offset-sm-4 content__body masjid">
+	<div class="col-xs-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body masjid">
 		<p>Data Pemateri tidak ditemukan.</p>
 	</div>
 </ng-template>
