--- a/src/app/components/tambah/tambah.component.html
+++ b/src/app/components/tambah/tambah.component.html
@@ -1,9 +1,9 @@
 <section id="content">
   <div class="container">
-      <div class="col-xs-12 offset-md-3 offset-lg-4 content__header">
+      <div class="col-xs-12 offset-md-2 offset-lg-3 content__header">
           <h2>Post Kajian</h2>
       </div>
-      <div class="col-xs-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body">
+      <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body">
           <form (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <label for="judul">Judul Kajian</label>
@@ -24,6 +24,14 @@
               <div class="form-group">
                 <label for="kategori">Kategori</label>
                 <input type="text" class="form-control" id="kategori" [(ngModel)]="kajian.kategori" name="kategori" placeholder="Contoh: Tabligh Akbar, Tauhid, Tahsin, Fiqih, ...">
+              </div>
+              <div class="form-group">
+                <label for="poster">Poster</label>
+                <div class="progress">
+                  <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
+                </div>
+                <br>
+                <input type="file" class="form-control" id="poster" [(ngModel)]="kajian.poster" name="poster" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
               </div>
             <button type="submit" class="btn btn-info btn-block">Submit</button>
           </form>
