--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -7,7 +7,7 @@
       </div>
       <div *ngIf="kajian?.length > 0; else noData">
         <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body kajian" *ngFor="let data of kajian">
-          <div class="kajian-img">
+          <div class="kajian-img" *ngIf="data.poster?.length > 0; else noImg">
             <img src="{{ data.poster }}">
           </div>
           <div class="kajian-title">
@@ -27,9 +27,74 @@
       </div>
   </div>
 </section>
+<section id="content-tab" class="content-tab">
+  <div class="container">
+    <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Masjid</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Majelis</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Pemateri</a>
+      </li>
+    </ul>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <div *ngIf="masjid?.length > 0; else noData">
+          <div *ngFor="let data of masjid">
+            <div class="masjid-title">
+              <h4>{{ data.nama }}</h4>
+              <p>@{{ data.username }}<br></p>
+            </div>
+              <hr>
+            <div  class="text-right">
+              <a href="#" class="btn btn-info btn-sm">View Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+        <div *ngIf="majelis?.length > 0; else noData">
+          <div *ngFor="let data of majelis">
+            <div class="masjid-title">
+              <h4>{{ data.nama }}</h4>
+              <p>@{{ data.username }}<br></p>
+            </div>
+              <hr>
+            <div  class="text-right">
+              <a href="#" class="btn btn-info btn-sm">View Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+        <div *ngIf="pemateri?.length > 0; else noData">
+          <div *ngFor="let data of pemateri">
+            <div class="masjid-title">
+              <h4>{{ data.nama }}</h4>
+              <p>@{{ data.username }}<br></p>
+            </div>
+              <hr>
+            <div  class="text-right">
+              <a href="#" class="btn btn-info btn-sm">View Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <ng-template #noData>
-  <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body masjid">
-    <p>Data Kajian tidak ditemukan.</p>
+  <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+    <p>Data tidak ditemukan.</p>
+  </div>
+</ng-template>
+
+<ng-template #noImg>
+  <div class="kajian-img-loader">
+    Loading ...
   </div>
 </ng-template>
