--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -5,26 +5,31 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+          true}">
               <a class="nav-link" routerLink="/">Kajian <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+          true}">
               <a class="nav-link" routerLink="/masjid">Masjid</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+          true}">
               <a class="nav-link" routerLink="/majelis">Majelis</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+          true}">
               <a class="nav-link" routerLink="/pemateri">Pemateri</a>
             </li>
           </ul>
           <hr>
-          <ul class="navbar-nav right-nav ml-auto">
-            <li class="nav-item">
+          <ul class="navbar-nav right-nav ml-auto" *ngIf="auth.user | async as user">
+            <li class="nav-item" *ngIf="user.level!=4">
               <a class="nav-link btn btn-primary addBtn" routerLink="/tambah">Post Kajian</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="index2.html">Profile</a>
+            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:
+          true}">
+              <a class="nav-link" routerLink="/profile">Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link btn-out" routerLink="" (click)="logout()">Sign Out</a>
