Fix : profile page and set new profile page

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
         </div>
           <form [formGroup]="userForm" class="login100-form validate-form" (ngSubmit)="login()">
             <span class="login100-form-title">
-              Website Info Kajian Islam
+              Sistem Informasi Jadwal Kajian Islam
             </span>
             <app-notification></app-notification>
 
