--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,7 +6,7 @@
         </div>
         <form [formGroup]="userForm" class="login100-form validate-form" (ngSubmit)="register()">
           <span class="login100-form-title">
-            Website Info Kajian Islam
+              Sistem Informasi Jadwal Kajian Islam
           </span>
           <app-notification></app-notification>
           <div class="wrap-input100 validate-input">
